# CentichainV

./: .gitignore  README.md  package-lock.json  package.json
src-tauri/: .taurignore  2  Cargo.toml  install_mongodb.bat  mongodb_install_result.txt  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/etc/dump/Centichain/: Blocks.bson  Blocks.metadata.json  UTXOs.bson  UTXOs.metadata.json  raddress.bson  raddress.metadata.json  reciepts.bson  reciepts.metadata.json  validators.bson  validators.metadata.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src-tauri/src/events/: db.rs  handler.rs  handshaking.rs  mod.rs  outgoing_connection.rs  response.rs  syncing.rs
src-tauri/src/events/gossip_messages/: handler.rs  mod.rs  transactions.rs
src-tauri/src/generator/: leader.rs  mod.rs  relay.rs  transaction.rs  validator.rs
src-tauri/src/generator/block/: block.rs  coinbase.rs  header.rs  message.rs  mod.rs
src-tauri/src/generator/swarm/: addresses.rs  mod.rs
src-tauri/src/prestart/: keys.rs  mod.rs
src-tauri/src/tools/: bsons.rs  downloader.rs  exit.rs  mod.rs  trun_sync.rs  utxo.rs  waiting.rs  wrongdoer.rs  zipp.rs
src-tauri/src/tools/for_front/: blocks.rs  centies.rs  make_trx.rs  mod.rs  mongodb.rs
src/app/: layout.tsx  page.tsx
src/app/components/keys/: index.tsx
src/app/generate_keys/: page.tsx
src/app/key_check/: page.tsx
src/app/main/: page.tsx
src/app/main/components/body/: index.tsx
src/app/main/components/footer/: index.tsx
src/app/pre_start/: page.tsx
src/app/starter/: page.tsx
~/.tauri/: centichain.key  centichain.key.pub
(+11 files in other folders)
